<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/background_color"
              android:gravity="center_horizontal"
    >

    <include layout="@layout/title_bar"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="@dimen/edittext_hight"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginRight="@dimen/margin_right"
    android:layout_marginTop="@dimen/margin_top_btn"
    android:orientation="horizontal"
    android:background="@drawable/edit_background"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="手机号码："
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_gravity="center_vertical"
        />
    <EditText
        android:id="@+id/et_phone_num"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/edittext_hight"
        android:textSize="@dimen/text_size"
        android:hint="@string/phone_num"
        android:cursorVisible="false"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:background="@null"
        android:inputType="phone"
        />

    <TextView
        android:id="@+id/tv_auth_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="获取验证码"
        android:textColor="@color/red_button"
        android:textSize="@dimen/text_size"
        android:layout_marginRight="@dimen/small_margin"
        android:layout_gravity="right|center_vertical"
        />
</LinearLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginRight="@dimen/margin_right"
    android:layout_marginTop="@dimen/margin_top"
    >
    <EditText
        android:id="@+id/et_auth_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_hight"
        android:textSize="@dimen/text_size"
        android:hint="@string/auth_code"
        android:gravity="center_vertical"
        android:background="@mipmap/edit_background"
        android:cursorVisible="false"
        android:paddingLeft="@dimen/small_padding"
        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="验  证  码："
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/small_margin"
        />
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginRight="@dimen/margin_right"
    android:layout_marginTop="@dimen/margin_top"
    >
    <EditText
        android:id="@+id/et_new_psd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_hight"
        android:textSize="@dimen/text_size"
        android:hint="@string/new_psd"
        android:gravity="center_vertical"
        android:background="@mipmap/edit_background"
        android:cursorVisible="false"
        android:paddingLeft="@dimen/small_padding"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="新  密  码："
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/small_margin"
        />
    </RelativeLayout>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_left"
    android:layout_marginRight="@dimen/margin_right"
    android:layout_marginTop="@dimen/margin_top"
    >
    <EditText
        android:id="@+id/et_make_sure_psd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_hight"
        android:textSize="@dimen/text_size"
        android:hint="@string/make_sure_psd"
        android:gravity="center_vertical"
        android:background="@mipmap/edit_background"
        android:cursorVisible="false"
        android:paddingLeft="@dimen/small_padding"
        android:digits="0123456789qwertzuiopasdfghjklyxcvbnm"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="确认密码："
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/text_size"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/small_margin"
        />
</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/small_margin"
        >
        <ImageView
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:src="@mipmap/ic_notice"
            />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:textColor="@color/text_color"
        android:text="@string/notice"
        />

    </LinearLayout>

    <Button
        android:id="@+id/btn_repsd"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/edittext_hight"
        android:background="@drawable/btn_background"
        android:text="@string/btn_repsd"
        android:textColor="@color/background_edit"
        android:layout_marginTop="@dimen/margin_top_btn"
        />
</LinearLayout>
